--- a/battleship-game/src/index.css
+++ b/battleship-game/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.clicked {
+  background-color: rgba(255, 0, 0, 0.5);
+}
